--- a/app.html
+++ b/app.html
@@ -10,8 +10,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="BB.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top me-2">
-            <span class="ms-2">BOBOIBOY</span>
+            <img src="BB.png" alt="Logo" width="80" height="80" class="d-inline-block align-text-top me-2">
+            <span class="text">BOBOIBOY</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,8 +30,15 @@
         background-size: cover;
         background-attachment: fixed;
     }
+    .text{
+        font-family: 'Courier New', Courier, monospace;
+        font-size: larger;
+    }
+    .navbar {
+        padding: 10px; 
+    }
     .col {
-        margin-bottom: 65px; 
+        margin-bottom: 20px; 
     }
 </style>
 
